Fix layout issues

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -3,9 +3,13 @@
     display: grid;
     grid-template-columns: 0.6fr 1.2fr 1.2fr;
     align-items: start;
-    padding: 70px 60px;
+    margin-top: 81px;
+    padding: 50px 60px;
     gap: 90px;
-    min-height: 1500px;
+    min-height: calc(100vh - 81px);
+    max-width: 2000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -20,8 +24,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     gap: 25px;
     margin-bottom: 30px;
+}
+
+.hero-left {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .shop-now-info button {
@@ -34,7 +46,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 25px;
-    margin-top: -500px
 }
 
 .top-text {
@@ -55,14 +66,16 @@
 }
 
 .hero-right img {
-    transform: scale(1.8);
-    translate: 0px 30px;
+    height: 80vh;
+    width: auto;
+    translate: -100px 0px;
 }
 
 .headline {
-    font-size: 54px;
+    font-size: 80px;
     font-weight: 700;
-    line-height: 1.1;
+    line-height: 1;
+    margin-top: -20px
 }
 
 .orange {
@@ -70,15 +83,10 @@
 }
 
 .subtext {
-    font-size: 18px;
-    max-width: 350px;
+    margin-top: 40px;
+    font-size: 32px;
 }
 
-.hero-img {
-    width: 420px;
-    max-width: 100%;
-    height: auto;
-}
 
 
 /* SHOP BUTTON */
